<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        
      <PreferenceCategory
	 android:title="@string/stock">

	<CheckBoxPreference
	   android:key="h_icon"
	   android:title="@string/h_icon_title"
	   android:summaryOn="@string/h_icon_on"
	   android:summaryOff="@string/h_icon_off" />
        
        <CheckBoxPreference android:key="pref_trackball_wake"
            android:title="@string/pref_trackball_wake_title" 
            android:summary="@string/pref_trackball_wake_summary" />

        <CheckBoxPreference android:key="pref_trackball_unlock"
            android:title="@string/pref_trackball_unlock_title" 
            android:summary="@string/pref_trackball_unlock_summary" />

	<CheckBoxPreference
	   android:key="adb_wifi"
	   android:title="@string/adb_wifi_title"
	   android:summaryOn="@string/adb_wifi_summary_on"
	   android:summaryOff="@string/adb_wifi_summary_off" />

	<ListPreference
	   android:key="app2sd"
	   android:title="@string/stock_a2sd_title"
	   android:summary="@string/stock_a2sd_summary"
	   android:entries="@array/entries_app2sd"
	   android:entryValues="@array/entryvalues_app2sd"
	   android:defaultValue="0"
	   android:dialogTitle="@string/select_option" />

      </PreferenceCategory>

      <PreferenceCategory
	 android:title="@string/rotation">

	<CheckBoxPreference
	   android:key="rotation_90"
	   android:title="@string/rotation_90" />

	<CheckBoxPreference
	   android:key="rotation_180"
	   android:title="@string/rotation_180" />

	<CheckBoxPreference
	   android:key="rotation_270"
	   android:title="@string/rotation_270" />

      </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/animations_settings_title">

        <ListPreference
           android:key="window_animations"
           android:title="@string/title_window_animations"
           android:summary="@string/summary_window_animations"
           android:entries="@array/entries_animations"
           android:entryValues="@array/entryvalues_animations"
           android:dialogTitle="@string/dialog_title_window_animations" />

        <ListPreference
           android:key="transition_animations"
           android:title="@string/title_transition_animations"
           android:summary="@string/summary_transition_animations"
           android:entries="@array/entries_animations"
           android:entryValues="@array/entryvalues_animations"
           android:dialogTitle="@string/dialog_title_transition_animations" />
    </PreferenceCategory>
</PreferenceScreen>
